--- a/index.html
+++ b/index.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html lang="fre">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Encyclopédie Pokémon</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Encyclopédie Pokémon</h1>
+      <h1>Encyclopédie Pokémon</h1>
     </header>
     <main>
-        <div class="classeur">
-            <article class="fiche">
-                <h1 class="nom"></h1>
-                <img>
-                <p class="type"></p>
-                <p class="id"></p>
-            </article>
-        </div>
+      <article class="fiche">
+        <h1 class="nom">Aligatueur</h1>
+        <img
+          href="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/160.png"
+        />
+        <p class="type">Eau</p>
+        <p class="id">#0160</p>
+      </article>
+      <article class="fiche">
+        <h1 class="nom">Grainipiot</h1>
+        <img
+          href="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/273.png"
+        />
+        <p class="type">Plante</p>
+        <p class="id">#0274</p>
+      </article>
+      <article class="fiche">
+        <h1 class="nom">Élekable</h1>
+        <img
+          href="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/160.png"
+        />
+        <p class="type">Electrik</p>
+        <p class="id">#0466</p>
+      </article>
     </main>
-</body>
+  </body>
 </html>
