added 6 komepons + style

--- a/index.html
+++ b/index.html
@@ -12,28 +12,52 @@
     </header>
     <main>
       <article class="fiche">
-        <h1 class="nom">Aligatueur</h1>
+        <header class="nom">Aligatueur</header>
         <img
-          href="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/160.png"
+          src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/160.png"
         />
-        <p class="type">Eau</p>
+        <p class="type eau">Eau</p>
         <p class="id">#0160</p>
       </article>
       <article class="fiche">
-        <h1 class="nom">Grainipiot</h1>
+        <header class="nom">Grainipiot</header>
         <img
-          href="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/273.png"
+          src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/273.png"
         />
-        <p class="type">Plante</p>
+        <p class="type plante">Plante</p>
         <p class="id">#0274</p>
       </article>
       <article class="fiche">
-        <h1 class="nom">Élekable</h1>
+        <header class="nom">Élekable</header>
         <img
-          href="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/160.png"
+          src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/466.png"
         />
-        <p class="type">Electrik</p>
+        <p class="type electrik">Electrik</p>
         <p class="id">#0466</p>
+      </article>
+      <article class="fiche">
+        <header class="nom">Togepi</header>
+        <img
+          src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/175.png"
+        />
+        <p class="type fée">Fée</p>
+        <p class="id">#0175</p>
+      </article>
+      <article class="fiche">
+        <header class="nom">Ponyta</header>
+        <img
+          src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/077.png"
+        />
+        <p class="type feu">Feu</p>
+        <p class="id">#0077</p>
+      </article>
+      <article class="fiche">
+        <header class="nom">Psystigri</header>
+        <img
+          src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/677.png"
+        />
+        <p class="type psy">Psy</p>
+        <p class="id">#0677</p>
       </article>
     </main>
   </body>
