--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <body>
     <header>
       <h1>Encyclopédie Pokémon</h1>
+      <input type="text" placeholder="Rechercher un Pokémon...">
+      <script src="searchbar.js"></script>
     </header>
     <main>
       <article class="fiche">
