included cosmetic legendaire class

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
         <p class="type feu">Feu</p>
         <p class="id">#0077</p>
       </article>
+      <article class="fiche legendaire">
+        <header class="nom">Groudon</header>
+        <img
+          src="https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/383.png"
+        />
+        <p class="type sol">Sol</p>
+        <p class="id">#0383</p>
+      </article>
       <article class="fiche">
         <header class="nom">Psystigri</header>
         <img
